   if the user selected the other.
 - COPPA age is now configurable.  Set to zero to disable the COPPA check.  When
   disabled, the intro page instead reminds the users to read the rules.  The
   click-thru effect and URL are identical to the "over age" COPPA link, so Bots
   and Proxies should still continue to work.

Version: 4.9.1
Date: March 30, 2009
 - CSS PHP file split into three different versions for the three default color schemes
 - Lameness filter can now be disabled in configuration
 - Missing configuration values are now given default values
 - Added over five hundred "invalid" named HTML colors, such as "indianred1" to the color
   translation list.

Version: 4.9.0
Codename: Diaspora
Date: March 28, 2009
 - Major code cleanup, with numerous internal style fixes and additional code comments
 - Major CSS refactor
 - Major HTML refactor
 - CSS PHP file now emits proper caching headers to help reduce the "white flash" effect
 - All Javascript rewritten to take advantage of jQuery 1.3
 - [monger] markup code removed
 - Invalid HTML colors (i.e. "crap", "radioactive") are now transformed into legal hex colors using
   the pre-Mozilla Netscape formula.  Viewers should now always see the same color, regardless of
   browser.  The classic Netscape colors have been added to a translation list, so colors such as
   "aliceblue" will continue to work.


---- Older Versions ----


Version: 4.8
Codename: Far and Wide
Date: 2007
 - Numerous small code enhancements.
 - Initial public release.


Version: 4.7
Codename: Twilight
Date: c. 2004
 - Added Captions: Small descriptive text displayed as part of the name, ideal for RP!
 - New chat message layout to accomodate Captions.


Version: 4.6
Codename: Facility
Date: c. 2004
 - Enhanced Bot and Proxy support.
 - Public logs are now available, based on Guard logs, just without the IP information.


Version: 4.5
Codename: Universal
Date: Late Summer, 2002